[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/combat/Combat.gd" type="Script" id=1]
[ext_resource path="res://screens/combat/interface/UIRaid5.gd" type="Script" id=2]
[ext_resource path="res://theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://theme/fonts/19700.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 4 )

[node name="Raid5" type="Node2D"]
position = Vector2( 24.545, 177.78 )
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combatants" type="HBoxContainer" parent="UI"]
margin_top = 77.0
margin_right = 360.0
margin_bottom = 77.0
rect_clip_content = true
custom_constants/separation = 360
__meta__ = {
"_edit_use_anchors_": false
}

[node name="firstArr" type="GridContainer" parent="UI/Combatants"]
columns = 4

[node name="Buttons" type="PanelContainer" parent="UI"]
margin_left = 20.0
margin_top = 338.0
margin_right = 1603.0
margin_bottom = 777.0
rect_scale = Vector2( 0.95, 0.834 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Buttons"]
margin_left = 90.0
margin_top = 35.0
margin_right = 1493.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7

[node name="AddA1" type="Button" parent="UI/Buttons/GridContainer"]
margin_right = 197.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add_A1"

[node name="AddA2" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add_A2"

[node name="AddA3" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 402.0
margin_right = 599.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA3"

[node name="AddAp" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 603.0
margin_right = 800.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddAp"

[node name="AddB1" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 804.0
margin_right = 1001.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddB1"

[node name="AddB2" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 1005.0
margin_right = 1202.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddB2"

[node name="AddBp" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 1206.0
margin_right = 1403.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddBp"

[node name="AddB3" type="Button" parent="UI/Buttons/GridContainer"]
margin_top = 121.0
margin_right = 197.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddB3"

[node name="AddC1" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 201.0
margin_top = 121.0
margin_right = 398.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddC1"

[node name="AddCp" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 402.0
margin_top = 121.0
margin_right = 599.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddCp"

[node name="AddC2" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 603.0
margin_top = 121.0
margin_right = 800.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddC2"

[node name="AddC3" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 804.0
margin_top = 121.0
margin_right = 1001.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddC3"

[node name="AddDp" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 1005.0
margin_top = 121.0
margin_right = 1202.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddDp"

[node name="AddD1" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 1206.0
margin_top = 121.0
margin_right = 1403.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddD1"

[node name="AddD2" type="Button" parent="UI/Buttons/GridContainer"]
margin_top = 242.0
margin_right = 197.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddD2"

[node name="AddD3" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 201.0
margin_top = 242.0
margin_right = 398.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddD3"

[node name="Check" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 402.0
margin_top = 242.0
margin_right = 599.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Check"

[node name="Label" type="Label" parent="."]
margin_left = 518.849
margin_top = -170.907
margin_right = 993.849
margin_bottom = -18.907
custom_fonts/font = SubResource( 1 )
text = "RAID_5"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA1" to="UI" method="_on_AddA1_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA2" to="UI" method="_on_AddA2_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA3" to="UI" method="_on_AddA3_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddAp" to="UI" method="_on_AddAp_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddB1" to="UI" method="_on_AddB1_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddB2" to="UI" method="_on_AddB2_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddBp" to="UI" method="_on_AddBp_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddB3" to="UI" method="_on_AddB3_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddC1" to="UI" method="_on_AddC1_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddCp" to="UI" method="_on_AddCp_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddC2" to="UI" method="_on_AddC2_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddC3" to="UI" method="_on_AddC3_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddDp" to="UI" method="_on_AddDp_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddD1" to="UI" method="_on_AddD1_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddD2" to="UI" method="_on_AddD2_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddD3" to="UI" method="_on_AddD3_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/Check" to="UI" method="_on_Check_button_up"]
